Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119752

Customized QToolTip with padding or margin displays incorrectly

XMLWordPrintable

    • Windows
    • e977a6292 (dev), 8dcb5814e (6.7), c662dadd4 (6.6), b0bee2fc8 (tqtc/lts-6.5)
    • G&UI Finishing 2023

      When QToolTip is styled and either the padding or margin properties are set via a stylesheet, the first instance of a QToolTip that appears has more padding/margin than intended.

      If a second QToolTip is triggered before the first disappears the subsequent QToolTip is correctly styled, any following QToolTips are also correct.

      Letting the QToolTip disappear and bringing up another one will once more bring up an incorrectly styled QToolTip.

       

      See attached project for a reproduction.

       

      May be a reversion of whatever fixed QTBUG-59119

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            santhoshkumar Santhosh Kumar Selvaraj
            kevin.zhang Kevin Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes